--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+    font-family: 'Inter', sans-serif;
+}
+
+.container {
+    margin: 30px 50px;
+}
+
+.profile {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+.userImg {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+#twitter {
+    padding: 30px 0;
+}
+
+ #slack {
+    display: none;
+ }
+
+#twitter__link,
+#btn__zuri,
+#books,
+#book__python,
+#pitch,
+#book__design{
+    text-decoration: none;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    display: block;
+    color: black;
+    padding: 30px 0;
+    background-color: #EAECF0;
+    border-radius: 8px;
+    margin-bottom: 20px;
 }
